Update a fancy paragraph

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 </head>
 <body>
   <h1>Chrismess</h1>
+  <h1 class="fancy">A whole mess o' Chrisses</h1>
+
+  <p class="fancy">Change me.</p>
 
   <button>Change Heading</button>
 
