Update the heading when a form is submitted

--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 </head>
 <body>
   <h1>Chrismess</h1>
-  <h1 class="fancy">A whole mess o' Chrisses</h1>
 
-  <p class="fancy">Change me.</p>
-
-  <button>Change Heading</button>
+  <form id="flickForm">
+    <input type="text" name="flickName">
+    <button type="submit">Update Heading</button>
+  </form>
 
   <script src="index.js"></script>
 </body>
