--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     <button type="submit">Update Heading</button>
   </form>
 
+  <div id="flicks"></div>
+
   <script src="index.js"></script>
 </body>
 </html>
