Add a placeholder to flickName

--- a/index.html
+++ b/index.html
@@ -11,7 +11,12 @@
   <h1>Chrismess</h1>
 
   <form id="flickForm">
-    <input type="text" name="flickName" autofocus>
+    <input
+      type="text"
+      name="flickName"
+      placeholder="Enter a flick"
+      autofocus
+    >
     <button type="submit">Update Heading</button>
   </form>
 
