Update a fancy paragraph

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 </head>
 <body>
   <h1>Chrismess</h1>
+  <h1 class="fancy">A bucket full o' Chris</h1>
+
+  <p class="fancy">So many Chrisses, so little time.</p>
 
   <button>Update Heading</button>
 
