Update the heading when a form is submitted

--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 </head>
 <body>
   <h1>Chrismess</h1>
-  <h1 class="fancy">A bucket full o' Chris</h1>
 
-  <p class="fancy">So many Chrisses, so little time.</p>
-
-  <button>Update Heading</button>
+  <form id="flickForm">
+    <input type="text" name="flickName">
+    <button type="submit">Add Flick</button>
+  </form>
 
   <script src="index.js"></script>
 </body>
