Autofocus the flickName input

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <h1>Chrismess</h1>
 
   <form id="flickForm">
-    <input type="text" name="flickName">
+    <input type="text" name="flickName" autofocus>
     <button type="submit">Add Flick</button>
   </form>
 
