Add flicks to an unordered list

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <button type="submit">Add Flick</button>
   </form>
 
-  <div id="flicks"></div>
+  <ul id="flicks"></ul>
 
   <script src="index.js"></script>
 </body>
