--- a/index.html
+++ b/index.html
@@ -8,16 +8,22 @@
   <link rel="stylesheet" type="text/css" media="screen" href="index.css" />
 </head>
 <body>
-  <h1>Chrismess</h1>
+  <header>
+    <h1>Chrismess</h1>
+    <h2>a whole mess of Chrisses</h2>
+    <img src="decoration.png" alt="">
+  </header>
 
   <form id="flickForm">
-    <input
-      type="text"
-      name="flickName"
-      placeholder="Enter a flick"
-      autofocus
-    >
-    <button type="submit">Update Heading</button>
+    <div>
+      <input
+        type="text"
+        name="flickName"
+        placeholder="Enter a flick"
+        autofocus
+      >
+      <button type="submit">Update Heading</button>
+    </div>
   </form>
 
   <ul id="flicks"></ul>
