Add class names to the elements we create

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </header>
 
   <form id="flickForm">
-    <div>
+    <div class="justTesting seriously">
       <input
         type="text"
         name="flickName"
