Add a form field for "Chris name"

--- a/index.html
+++ b/index.html
@@ -22,6 +22,12 @@
         placeholder="Enter a flick"
         autofocus
       >
+      <input
+        class="smaller"
+        type="text"
+        name="chrisName"
+        placeholder="Which Chris?"
+      >
       <button type="submit">Add Flick</button>
     </div>
   </form>
