Use FontAwesome SVG for button icons

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Chrismess - A whole mess o' Chrisses</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" media="screen" href="index.css" />
+  <script defer src="https://use.fontawesome.com/releases/v5.1.0/js/all.js" integrity="sha384-3LK/3kTpDE/Pkp8gTNp2gR/2gOiwQ6QaO7Td0zV76UFJVhqLl4Vl3KL1We6q6wR9" crossorigin="anonymous"></script>
 </head>
 <body>
   <header>
@@ -21,12 +22,14 @@
         name="flickName"
         placeholder="Enter a flick"
         autofocus
+        required
       >
       <input
         class="smaller"
         type="text"
         name="chrisName"
         placeholder="Which Chris?"
+        required
       >
       <button type="submit">Add Flick</button>
     </div>
